more updates on comments
- comment updated for better clarity
- added a cell to run pip install wordcloud and nltk

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ articles-151to200.csv
 articles-201to249.csv
 apikey.txt
 .Rhistory
+.ipynb_checkpoints/Datalib-Copy-checkpoint.ipynb
+Datalib-Copy.ipynb
